Print length of each item in list using map.